# canary

./: CHANGELOG.md  Cargo.toml  Makefile.toml  README.md  cliff.toml  dist-workspace.toml
.github/workflows/: on-merge.yml  on-pr.yml  push.yml  release.yml
src/: lib.rs
src/adapter/: mod.rs
src/adapters/: mod.rs
src/adapters/engines/: action.rs  controller.rs  mod.rs
src/adapters/ingresses/: mod.rs
src/adapters/monitors/: mod.rs
src/cmd/: mod.rs  version.rs
src/config/: command.rs  flags.rs
src/metrics/: mod.rs
src/pipeline/: mod.rs
src/stats/: chi.rs  mod.rs  table.rs
